# 3rd_imdc_fgv_sakhal

./: .gitignore  README.md  pyproject.toml
dengue_hardpulse/: __init__.py  inference.py  model.py  plot_forecast.py  run_model.py  seasonal.py
scripts/: 7_prepare_tensors.py  build_dengue_pulse_inputs.py  merge_small_city_units.py  submit_mosqlimate_predictions.py
